--- a/CodePipeline/pipeline.yaml
+++ b/CodePipeline/pipeline.yaml
@@ -129,13 +129,15 @@ Resources:
       Environment:
         Type: LINUX_CONTAINER
         ComputeType: BUILD_GENERAL1_SMALL
-        Image: aws/codebuild/eb-python-3.4-amazonlinux-64:2.1.6
+        Image: aws/codebuild/amazonlinux2-x86_64-standard:2.0
       Source:
         Type: CODEPIPELINE
         BuildSpec: !Sub |
           version: 0.2
           phases:
             install:
+              runtime-versions:
+                python: 3.7 
               commands:
                 - echo "Installing wget and boto3"
                 - pip3 install wget
