--- a/CodePipeline/pipeline.yaml
+++ b/CodePipeline/pipeline.yaml
@@ -160,18 +160,21 @@ Resources:
       Environment:
         Type: LINUX_CONTAINER
         ComputeType: BUILD_GENERAL1_SMALL
-        Image: aws/codebuild/eb-python-3.4-amazonlinux-64:2.1.6
+        Image: aws/codebuild/standard:2.0
       Source:
         Type: CODEPIPELINE
         BuildSpec: !Sub |
           version: 0.2
           phases:
             install:
-              commands:
+              runtime-versions:
+                python: 3.7 
+            install:
+              :
                 - echo "Installing wget and boto3"
-                - pip3 install wget
-                - pip3 install boto3
-                - pip3 install numpy
+                - pip install wget
+                - pip install boto3
+                - pip install numpy
             build:
               commands:
               - echo "Running test.py"
